crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_empty_tool_argument_buffer.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: body
---
{
  "model": "gemini-3.0-pro",
  "input": [
    {
      "type": "function_call",
      "id": "call_1",
      "name": "ping",
      "arguments": {}
    }
  ],
  "stream": true
}
