crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_forced_tool_choice.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: body
---
{
  "model": "gemini-3.0-pro",
  "input": [
    {
      "type": "user_input",
      "content": [
        {
          "type": "text",
          "text": "What's the weather in Tokyo?"
        }
      ]
    }
  ],
  "stream": true,
  "tools": [
    {
      "type": "function",
      "name": "get_weather",
      "description": "Get the current weather",
      "parameters": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "title": "NoParams",
        "type": "object"
      }
    }
  ],
  "generation_config": {
    "tool_choice": {
      "allowed_tools": {
        "mode": "any",
        "tools": [
          "get_weather"
        ]
      }
    }
  }
}
