crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_image_content_block.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: err.to_string()
---
google-genai codec does not encode Image blocks
