crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_multi_turn_text.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: "enc(&req, EndpointMode::Interactions)"
---
{
  "input": [
    {
      "content": [
        {
          "text": "What is the capital of France?",
          "type": "text"
        }
      ],
      "type": "user_input"
    },
    {
      "content": [
        {
          "text": "Paris.",
          "type": "text"
        }
      ],
      "type": "model_output"
    },
    {
      "content": [
        {
          "text": "And its population?",
          "type": "text"
        }
      ],
      "type": "user_input"
    }
  ],
  "model": "gemini-3.0-pro",
  "stream": true
}
