crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_parallel_tool_calls.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: "enc(&req, EndpointMode::Interactions)"
---
{
  "input": [
    {
      "content": [
        {
          "text": "Weather and time in Tokyo?",
          "type": "text"
        }
      ],
      "type": "user_input"
    }
  ],
  "model": "gemini-3.0-pro",
  "stream": true,
  "tools": [
    {
      "description": "Get the current weather",
      "name": "get_weather",
      "parameters": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "title": "NoParams",
        "type": "object"
      },
      "type": "function"
    },
    {
      "description": "Get the current time",
      "name": "get_time",
      "parameters": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "title": "NoParams",
        "type": "object"
      },
      "type": "function"
    }
  ]
}
