crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_reasoning_budget_variant.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: body
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "Summarize this briefly."
        }
      ],
      "role": "user"
    }
  ],
  "generationConfig": {
    "thinkingConfig": {
      "thinkingBudget": 8192
    }
  }
}
