crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_reasoning_off.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: body
---
{
  "model": "gemini-3.0-pro",
  "input": [
    {
      "type": "user_input",
      "content": [
        {
          "type": "text",
          "text": "Hello."
        }
      ]
    }
  ],
  "stream": true
}
