crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_reasoning_on.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: body
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Prove sqrt(2) is irrational."
        }
      ]
    }
  ],
  "generationConfig": {
    "thinkingConfig": {
      "thinkingBudget": 24576
    }
  }
}
