crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_reasoning_on_interactions_thinking_level.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: body
---
{
  "generation_config": {
    "thinking_level": "high"
  },
  "input": [
    {
      "content": [
        {
          "text": "Prove sqrt(2) is irrational.",
          "type": "text"
        }
      ],
      "type": "user_input"
    }
  ],
  "model": "gemini-3.0-pro",
  "stream": true
}
