crates/roundhouse-provider/tests/snapshots/golden_google_genai__google_genai_single_turn_text_generate_content.snap
---
source: crates/roundhouse-provider/tests/golden_google_genai.rs
expression: legacy
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "What is 2+2?"
        }
      ],
      "role": "user"
    }
  ]
}
